content wrap fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,8 @@ html,body,ion-app {
 :root { --header-h: 65px; }
 
 #app-component-wrap {
+    --header-h: 61px;
+
     display: flex;
     flex-direction: column;
     position: relative;
@@ -26,7 +28,7 @@ html,body,ion-app {
   position: fixed;
   top: var(--header-h);
   left: 0; right: 0; bottom: 0;
-  overflow: hidden; /* или auto ако сакаш да скрола */
+  overflow: auto; /* или auto ако сакаш да скрола */
   background: #0b0f14; /* по желба, за да нема “flash” */
 }
 
